[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["env"]

[project]
name = "rl-mtsp"
version = "0.0.1"
dependencies = [
  "gymnasium",
  "pygame>=2.1.3",
  "pre-commit",
]
authors = [
  {name = "Thi Thuy Ngan Duong"},
]
maintainers = [
  {name = "Thi Thuy Ngan Duong"}
]
readme = "README.md"